// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`DiffRenderable - unified view renders correctly: unified view simple diff 1`] = `
" 1   function hello() {                                                         
 2 -   console.log("Hello");                                                    
 2 +   console.log("Hello, World!");                                            
 3   }                                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - split view renders correctly: split view simple diff 1`] = `
" 1   function hello() {                  1   function hello() {                 
 2 -   console.log("Hello");             2 +   console.log("Hello, World!");    
 3   }                                   3   }                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - multi-line diff unified view: unified view multi-line diff 1`] = `
"  1   function add(a, b) {                                                      
  2     return a + b;                                                           
  3   }                                                                         
  4                                                                             
  5 + function subtract(a, b) {                                                 
  6 +   return a - b;                                                           
  7 + }                                                                         
  8 +                                                                           
  5   function multiply(a, b) {                                                 
  6 -   return a * b;                                                           
 10 +   return a * b * 1;                                                       
  7   }                                                                         
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - multi-line diff split view: split view multi-line diff 1`] = `
"  1   function add(a, b) {                1   function add(a, b) {              
  2     return a + b;                     2     return a + b;                   
  3   }                                   3   }                                 
  4                                       4                                     
                                          5 + function subtract(a, b) {         
                                          6 +   return a - b;                   
                                          7 + }                                 
                                          8 +                                   
  5   function multiply(a, b) {           9   function multiply(a, b) {         
  6 -   return a * b;                    10 +   return a * b * 1;               
  7   }                                  11   }                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - add-only diff unified view: unified view add-only diff 1`] = `
" 1 + function newFunction() {                                                   
 2 +   return true;                                                             
 3 + }                                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - add-only diff split view: split view add-only diff 1`] = `
"                                         1 + function newFunction() {           
                                         2 +   return true;                     
                                         3 + }                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - remove-only diff unified view: unified view remove-only diff 1`] = `
" 1 - function oldFunction() {                                                   
 2 -   return false;                                                            
 3 - }                                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - remove-only diff split view: split view remove-only diff 1`] = `
" 1 - function oldFunction() {                                                   
 2 -   return false;                                                            
 3 - }                                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - split view alignment with empty lines: split view alignment 1`] = `
" 1 line1                                 1   line1                              
                                         2 + line2_added                        
                                         3 + line3_added                        
                                         4 + line4_added                        
 2 line5                                 5   line5                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - line numbers hidden for empty alignment lines in split view: split view with hidden line numbers for empty lines 1`] = `
"                                         1 + function newFunction() {           
                                         2 +   return true;                     
                                         3 + }                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - consistent left padding for line numbers > 9: unified view with double-digit line numbers 1`] = `
"  8   line8                                                                     
  9   line9                                                                     
 10 - line10_old                                                                
 10 + line10_new                                                                
 11   line11                                                                    
 12 + line12_added                                                              
 13 + line13_added                                                              
 12   line14                                                                    
 13   line15                                                                    
 14 - line16_old                                                                
 16 + line16_new                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`DiffRenderable - large line numbers displayed correctly: unified view large line numbers 1`] = `
" 42   const line42 = 'context';                                                 
 43   const line43 = 'context';                                                 
 44 - const line44 = 'removed';                                                 
 44 + const line44 = 'added';                                                   
 45   const line45 = 'context';                                                 
 46 + const line46 = 'added';                                                   
 46   const line47 = 'context';                                                 
 47   const line48 = 'context';                                                 
 48 - const line49 = 'removed';                                                 
 49 + const line49 = 'changed';                                                 
 49   const line50 = 'context';                                                 
 50   const line51 = 'context';                                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;
